# attention-tracker

./: .bashrc  README.md  cross_category.ipynb  main.py  original_paper.ipynb  pyproject.toml  reimplementation.ipynb
data/: prompt_injection_00.json
notebooks/: playground.ipynb
utils/: cli.py  utils.py
