[project]
name = "attention-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "seaborn>=0.13.2",
    "torch==2.2.0",
    "transformer-lens==2.15.0",
    "huggingface-hub>=0.36.0",
    "transformers==4.51.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
find-heads = "utils.cli:find_heads"
benchmark = "utils.cli:run_benchmark"
detect = "utils.cli:detect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]